syntax = "proto3";
package com.example.grpc;

// Request payload
message HelloRequest {

  string name = 1;
  string lastName = 2;
}

message HelloResponse {
  string response = 1;
}

// Defining a Service, a Service can have multiple RPC operations
service GrpcService {
  // Define a RPC operation
  rpc testeGrpc(HelloRequest) returns (HelloResponse);
}